src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/NVBlendEquationAdvanced_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVBlendEquationAdvanced_StringErrorContext.class */
public final class NVBlendEquationAdvanced_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glBlendParameteriNV(II)V", "net/labymod/core/laby3d/opengl/error/generated/NVBlendEquationAdvancedErrorContext");
        methods.put("glBlendBarrierNV()V", "net/labymod/core/laby3d/opengl/error/generated/NVBlendEquationAdvancedErrorContext");
        return methods;
    }
}
